TFP-5178 skille behandling og behandlingskontroll